// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "com.google.homesampleapp";
option java_multiple_files = true;

// Info about a Matter device that is persisted in a Proto DataStore.
message Device {
    // Timestamp when the device was commissioned.
    google.protobuf.Timestamp date_commissioned = 1;

    // VID
    string vendorId = 2;

    // PID
    string productId = 3;

    // Device type.
    enum DeviceType {
        TYPE_UNSPECIFIED = 0;
        TYPE_UNKNOWN = 1;
        TYPE_LIGHT = 2;
        TYPE_OUTLET = 3;
    }
    DeviceType deviceType = 4;

    // Device ID within the app's fabric.
    int64 device_id = 5;

    // Device name.
    string name = 6;

    // Room where device is located.
    string room = 7;

    // The name of the model for the device.
    string productName = 8;

    // The name of the vendor for the device.
    string vendorName = 9;
}

message Devices {
    int64 last_device_id = 1;
    repeated Device devices = 2;
}